fixing color contrast

--- a/week03/styles/design.css
+++ b/week03/styles/design.css
@@ -32,8 +32,8 @@ article p {
 }
 
 .callout {
-    color: #777;
-    background-color: #702963;
+    color: #000000;
+    background-color: #f1e4f6;
     padding: 1rem;
 }
 
